JumpScript/tests/baselines/reference/class2.errors.txt
tests/cases/compiler/class2.jump(1,29): error TS1128: Declaration or statement expected.
tests/cases/compiler/class2.jump(1,45): error TS1128: Declaration or statement expected.


==== tests/cases/compiler/class2.jump (2 errors) ====
    class foo { constructor() { static f = 3; } }
                                ~~~~~~
!!! error TS1128: Declaration or statement expected.
                                                ~
!!! error TS1128: Declaration or statement expected.